Fixed styling issue where buttons wouldn't style on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ body {
     padding: 30px;
     font-family: 'Lato', sans-serif;
     text-align: center;
+    touch-action: manipulation;
 }
 
 input[type="button"]{ -webkit-appearance: none; }
